<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".presentation.ui.detail.DetailActivity">


    <ImageView
        android:id="@+id/iv_user_avatar"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_margin="16dp"
        android:contentDescription="@string/user_avatar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@drawable/user" />

    <TextView
        android:id="@+id/tv_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/poppins_bold"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@id/iv_user_avatar"
        app:layout_constraintTop_toTopOf="@id/iv_user_avatar"
        tools:text="fanggadewangga" />

    <TextView
        android:id="@+id/tv_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_light"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@id/tv_username"
        app:layout_constraintTop_toBottomOf="@id/tv_username"
        tools:text="fangga" />

    <ImageView
        android:id="@+id/iv_company"
        style="@style/DetailIcon"
        android:src="@drawable/company"
        android:contentDescription="@string/company"
        app:layout_constraintStart_toStartOf="@id/iv_user_avatar"
        app:layout_constraintTop_toBottomOf="@id/iv_user_avatar"
        app:tint="@color/grey" />

    <TextView
        android:id="@+id/tv_company"
        style="@style/Value"
        app:layout_constraintBottom_toBottomOf="@id/iv_company"
        app:layout_constraintStart_toEndOf="@id/iv_company"
        app:layout_constraintTop_toTopOf="@id/iv_company"
        tools:text="University of Brawijaya" />

    <ImageView
        android:id="@+id/iv_location"
        style="@style/DetailIcon"
        android:contentDescription="@string/location"
        android:src="@drawable/place"
        app:layout_constraintStart_toStartOf="@id/iv_user_avatar"
        app:layout_constraintTop_toBottomOf="@id/iv_company"
        app:tint="@color/grey" />

    <TextView
        android:id="@+id/tv_location"
        style="@style/Value"
        app:layout_constraintStart_toEndOf="@id/iv_location"
        app:layout_constraintTop_toBottomOf="@id/iv_location"
        app:layout_constraintTop_toTopOf="@id/iv_location"
        tools:text="Lamongan, Indonesia" />

    <ImageView
        android:id="@+id/iv_repository"
        style="@style/DetailIcon"
        android:src="@drawable/folder"
        android:contentDescription="@string/repository"
        app:layout_constraintStart_toStartOf="@id/iv_user_avatar"
        app:layout_constraintTop_toBottomOf="@id/iv_location"
        app:tint="@color/grey" />

    <TextView
        android:id="@+id/tv_repository"
        style="@style/Value"
        app:layout_constraintBottom_toBottomOf="@id/iv_repository"
        app:layout_constraintStart_toEndOf="@id/iv_repository"
        app:layout_constraintTop_toTopOf="@id/iv_repository"
        tools:text="32 Repositories" />

    <ImageView
        android:id="@+id/iv_follower"
        style="@style/DetailIcon"
        android:contentDescription="@string/follower"
        android:src="@drawable/audience"
        app:layout_constraintStart_toStartOf="@id/iv_user_avatar"
        app:layout_constraintTop_toBottomOf="@id/iv_repository"
        app:tint="@color/grey" />

    <TextView
        android:id="@+id/tv_follower"
        style="@style/Value"
        app:layout_constraintBottom_toBottomOf="@id/iv_follower"
        app:layout_constraintStart_toEndOf="@id/iv_follower"
        app:layout_constraintTop_toTopOf="@id/iv_follower"
        tools:text="24 Follower" />


    <ImageView
        android:id="@+id/iv_following"
        style="@style/DetailIcon"
        android:contentDescription="@string/following"
        android:src="@drawable/user"
        app:layout_constraintStart_toStartOf="@id/iv_user_avatar"
        app:layout_constraintTop_toBottomOf="@id/iv_follower"
        app:tint="@color/grey" />

    <TextView
        android:id="@+id/tv_following"
        style="@style/Value"
        app:layout_constraintBottom_toBottomOf="@id/iv_following"
        app:layout_constraintStart_toEndOf="@id/iv_following"
        app:layout_constraintTop_toTopOf="@id/iv_following"
        tools:text="1293198 Following" />


    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:backgroundTint="@color/black"
        app:tabSelectedTextColor="@color/white"
        app:tabTextColor="@color/dark_grey"
        app:layout_constraintTop_toBottomOf="@id/tv_following"/>

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/view_pager"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/tabs"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>